# ChangeLog for dev-libs/xmlsec
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/xmlsec/ChangeLog,v 1.40 2014/12/28 10:16:10 ago Exp $

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> xmlsec-1.2.20.ebuild:
  Stable for x86, wrt bug #533044

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> xmlsec-1.2.20.ebuild:
  Stable for amd64, wrt bug #533044

*xmlsec-1.2.20 (10 Oct 2014)

  10 Oct 2014; Tim Harder <radhermit@gentoo.org> +xmlsec-1.2.20.ebuild:
  Version bump.

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> xmlsec-1.2.18.ebuild,
  xmlsec-1.2.19.ebuild:
  Update libgcrypt dep to use slot :0.

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> xmlsec-1.2.19.ebuild:
  Stable for x86, wrt bug #475688

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> xmlsec-1.2.19.ebuild:
  Stable for amd64, wrt bug #475688

*xmlsec-1.2.19 (02 May 2013)

  02 May 2013; Tim Harder <radhermit@gentoo.org> +xmlsec-1.2.19.ebuild:
  Version bump (bug #467470), add doc and static-libs use flags.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> xmlsec-1.2.18.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> -xmlsec-1.2.17.ebuild:
  Remove old ebuilds. Requested by Arfrever

  19 Jun 2011; Markus Meier <maekke@gentoo.org> xmlsec-1.2.18.ebuild:
  x86 stable, bug #371669

  18 Jun 2011; Markos Chandras <hwoarang@gentoo.org> xmlsec-1.2.18.ebuild:
  Stable on amd64 wrt bug #371669

*xmlsec-1.2.18 (14 May 2011)

  14 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +xmlsec-1.2.18.ebuild:
  Version bump.

  05 Apr 2011; Christoph Mende <angelos@gentoo.org> xmlsec-1.2.17.ebuild:
  Stable on amd64 wrt bug #361397

  04 Apr 2011; Thomas Kahle <tomka@gentoo.org> xmlsec-1.2.17.ebuild:
  x86 stable per bug 361397

*xmlsec-1.2.17 (03 Apr 2011)

  03 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +xmlsec-1.2.17.ebuild: