@@ -6,23 +6,13 @@ DIST xmlsec1-1.2.19.tar.gz 1766298 SHA256 2fc8f7c9fadb0f6c565bf304de798a875fc719
 DIST xmlsec1-1.2.20.tar.gz 1769329 SHA256 3221593ca50f362b546a0888a1431ad24be1470f96b2469c0e0df5e1c55e7305 SHA512 2f8d473916abf9822367edbe857fc2e12dc9858d12e790d689d787e439904bd6a452bf631043aa66e7502457ab0815a473657f58fca17a213e2490f5655e5ae5 WHIRLPOOL 29ddaef03d46fe08aa2dba200be755817f8e77de3bbbb3ed86dae65e891239f3051f79fdfadec6ae56023197e32e1c44a94385a1ce306081f3bf94be6226f8c7
 EBUILD xmlsec-1.2.18.ebuild 1544 SHA256 2c81b0116b7c46bab964be974acf72ff2f98a2aa95b81011670354c2deba16c5 SHA512 0c3dafb7a2a5a1e3cacb73c3fe25d8d4a2aeacdac0bcfdc003618db041bd544d5b1f2968e15888db480dfd8dd3b7a8e59403ac638f1b08ba59bfa0a9a9c2f280 WHIRLPOOL 103abe5ccb93ba1f99041618b1f42296a5aa4741cffa140804d623cfd7116b6d968625c2783f2f787ed1da514d651d64724ee77f006881791d06035d78c6b700
 EBUILD xmlsec-1.2.19.ebuild 1512 SHA256 2017b9c51abc69f30cf7c11d037af3c42b0539a0fd9846c9a8d6e91d430141de SHA512 044011e53c94a6cc9ed4f93078101404deba18d59665d88746dc2b1677f1855f287c76437a1875e48c20c583ed9827a3d3b8bfb7ea75b10b696192a0d63d7eb4 WHIRLPOOL 3119b7cdbd2439814f28fdfb162f7f9b1a0a2f82fc3e1ef6ca09ad72fde86b3b9c193f495708010f4e56a39fd6f7264d3f47cfea88b7c6eab682d92404efe9bc
-EBUILD xmlsec-1.2.20.ebuild 1509 SHA256 41ce6fef5c728789274ba248595af6d02c0b75b577dc7f7e7b0f7897717e0cc1 SHA512 11ac61528ba1f8c4a712258e273fa02d342eac87989efd6b215adf4e3a2b40d1ed124cd78a859e1298cc087d5a7627c5373e051ba40ca0328c9fa8bcc5507b7f WHIRLPOOL 85a69b68667869665fdc9b6fb432b52982dc221b907310d007ad0c1b2fc50ebdce5b4ba4622978255595e2c7627f4f8f9945caa994dec8acc0734fbef3f84f32
-MISC ChangeLog 5682 SHA256 1223dbe8502c67fa68967ed67f31e04acaa87fe74a67c4a2a511b054e8365921 SHA512 c84596c037a3759674d131be42fb9d6503c9c4a0ee123fb99da73c87d1a7d18d82a3b839c8ba506e4d4680c550382defe615e4d7e2d6ef12f76d3d8b29f69ef8 WHIRLPOOL 722e1ac349142fbaaddd12a66472a8208c3fd805ad9589a790c5f4c7569d8df476752837d6bbed97678634a61f3c602c54d47ad1455a004377408bd8d79d5fb6
+EBUILD xmlsec-1.2.20.ebuild 1516 SHA256 8a1d28563be5b9b91222ab0190f7d66d4c2fd8fc7bbb0fea2a93e8b7cc4b93a8 SHA512 137e9c2a26057f6e94856dbb2102e2b47e22bb4a8206b0f743a407040005dc2ad28c5de3fc58ace85f72f9ad34164b77018a1644323b11b0def9f43e7a5664fa WHIRLPOOL 77198426530fd6d441bd65a87fbc2155e12368917aa77838ae2bc233cce0e44375251914deb616f9bd722ed44fd0e28cdd8620611fc464199baf9a2fdad85b6f
+MISC ChangeLog 5783 SHA256 59336498970c6e049aa5ea3758ce09a294c20e6b27e302ebdd24b7d0ba46dffb SHA512 a717d9747f53a08fedafc0f477e101a4787c94224771a137e1cff2e641b35551284da088201dcd8d41e34a0407399fe934f137e05b9548caf86527e316828ee0 WHIRLPOOL 27acf01e4a53f591aa20b875edb69f5ce5c4c6b905124e2c1badfd50db4a073ea779dbfc014393e44e1e8681fb1d4ae5cedd2d8a72e980d13a6903fb6c1a5f4c
 MISC metadata.xml 407 SHA256 24ce9d1d2f526604b80756a26b22d11268c0ea34837c4b241ad1cc3b1acde5fb SHA512 7a8d48b6d414c32914453df1b0ab182c6c8e1b2236917f6a9d135180fc6892bf160cb52b2b988885deba037106e6ab9b1422a89badc615f77f1ca94d2730c846 WHIRLPOOL 42b9f7a2266ea6ef062f375106877e074c34ad51ec9909af03002436d7c9e6f701a2083316881374aa7d031da19ee501bb098aa51ea39518a8ab2c235395d44c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUn9hrAAoJELp701BxlEWfAQcP/28DXwvNa1ZHHJucLuucJtOa
-I6aMTr/SUdUBf/tS6OxthCuQ2Mlo/mPlJ5F6+sth8CVG6NcOYLFe6Ty1dRlzegDk
-2JpvEGhR+5/WTrqOtP5zx4MrKC2N/q2HIlulWlKFmVoXYLbKOn7hVmzmO7Qsgxc6
-ZN7fTkqpEZvPiQ814d71M0UmNpaLlUoguc6lU2MZDXv/75+MNJT6IxWHztYZGMPv
-5w1b8W2bBpWwYWj6z7W2b8Tl1XP/7YFj+tcNXG5fQjvEwQeNEJXGt6UNJ/SDY4fQ
-e/A4SAxtuAhLXfZEAhYPFNvccobQrzTevPlSJN1oryNtU+mHR9dTrLNru9gWZVbt
-9Ps2wOWcsnzZXspjDASN7PQoEeaMyGiYXOSjgTCJn0K2nNlOev/+cy7HJjuvtFPs
-vYanoJkktGVfopSmqPFsjJwQ+KGpDlPnR8HJDsZm4luc+u18IHDpLVTqBZSEnsFy
-+g4AOwumhEoJzzZEaIY1rLoqtRvFQBt6zVY7gNKAWCRlghl0fY7vczHQdKy00J0g
-O4cF0tWnqB38yGbXrfTsAyiJIF6YzMIxkhVdXUUHZrLfJVaOVz02PqBBOVsJcvCn
-7uXY8jr+MsqMPHw1D/1iNFSqu0ALTbD4jVCP01L6/Xt9AGadAIeNkFjsaj5IV7ZH
-gMSHPKRwdMO0DdAN2jjP
-=0HV7
+iEYEAREIAAYFAlVEnrcACgkQVWmRsqeSphPhWgCfRvQas9TCOpGuWwuyfqY69433
+am4AnjuXW2kSDhH55wXPN6OjgEXSSN7b
+=py4D
 -----END PGP SIGNATURE-----
