@@ -4,11 +4,11 @@ DESCRIPTION=Command line tool for signing, verifying, encrypting and decrypting 
 EAPI=5
 HOMEPAGE=http://www.aleksey.com/xmlsec
 IUSE=doc gcrypt gnutls nss +openssl static-libs
-KEYWORDS=amd64 ~ppc ~sparc x86
+KEYWORDS=amd64 ~ppc ~ppc64 ~sparc x86
 LICENSE=MIT
 RDEPEND=>=dev-libs/libxml2-2.7.4 >=dev-libs/libxslt-1.0.20 gcrypt? ( >=dev-libs/libgcrypt-1.4.0:0 ) gnutls? ( >=net-libs/gnutls-2.8.0 ) nss? ( >=dev-libs/nspr-4.4.1 >=dev-libs/nss-3.9 ) openssl? ( >=dev-libs/openssl-0.9.7 )
 REQUIRED_USE=|| ( gcrypt gnutls nss openssl ) gnutls? ( gcrypt )
 SLOT=0
 SRC_URI=http://www.aleksey.com/xmlsec/download/xmlsec1-1.2.20.tar.gz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=4d4d8ad5a4bcd8a97188edb37a06fa1f
+_md5_=c1bc3ccf491c49539a6865155d3dd16b
