@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/xmlsec
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xmlsec/ChangeLog,v 1.40 2014/12/28 10:16:10 ago Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xmlsec/ChangeLog,v 1.41 2015/05/02 09:53:58 jer Exp $
+
+  02 May 2015; Jeroen Roovers <jer@gentoo.org> xmlsec-1.2.20.ebuild:
+  Marked ~ppc64 (bug #534688).
 
   28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> xmlsec-1.2.20.ebuild:
   Stable for x86, wrt bug #533044
